clusters/labinfra/apps/dkron.xuperson.org/dkron-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dkron
  labels:
    app.kubernetes.io/name: dkron
    app.kubernetes.io/managed-by: flux
