clusters/labinfra/apps/dkron.xuperson.org/dkron-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dkron
  namespace: dkron
  labels:
    app: dkron
spec:
  selector:
    app: dkron
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: serf-lan
    port: 8946
    targetPort: 8946
    protocol: TCP
  - name: grpc
    port: 6868
    targetPort: 6868
    protocol: TCP
  type: ClusterIP
